--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -64,7 +64,7 @@ header h1 {
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
 }
 
-.recipe-card h2 {
+h2 {
   margin-top: 0;
   font-size: 1.4rem;
   color: #ff7f50;
@@ -76,6 +76,60 @@ header h1 {
 
 .recipe-card li {
   margin-bottom: 6px;
+}
+
+.full-screen-preview{
+  position: fixed;
+  width: 80%;
+  height: 80%;
+  background-color: white;
+  top: 3%;
+  left: 6%;
+  border-radius: 2em;
+  z-index: 2;
+  padding: 3em;
+  font-size: large;
+
+  overflow-y: scroll;
+}
+
+.darken{
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0%;
+  background-color: #33333350;
+  backdrop-filter: blur(5px);
+  z-index: 1;
+}
+
+@keyframes appear{
+  0%{
+    opacity: 0%;
+    scale: 95%;
+  }
+  100%{
+    opacity: 100%;
+    scale: 100%;
+  }
+}
+@keyframes appear-no-zoom{
+  0%{
+    opacity: 0%;
+  }
+  100%{
+    opacity: 100%;
+  }
+}
+@keyframes disappear{
+  0%{
+    opacity: 100%;
+  }
+  100%{
+    opacity: 0%;
+  }
 }
 
 /* Unused, local loading is too fast to be really usefuyl */
